web-infras/parser/tests/fixtures/babel/es2015/uncategorised/166/output.txt
[SyntaxError]: duplicate params (1,17)
1|function x(a, { a }){}
 |               ^
